--- a/test1.html
+++ b/test1.html
@@ -2,9 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Test 170220</title>
+    <link rel="stylesheet" href="test1.css">
 </head>
 <body>
+
+<form action="some.link" method="get" class="font">
+    <h1>Order Form</h1>
+
+    What would you like to buy?
+    <br>
+    <select class="sth1" name="sth1" >
+        <option value="A">A</option>
+        <option value="B">B (+ 0.5$)</option>
+        <option value="C">C (+ 0.5$)</option>
+        <br>
+
+        </select><br><br>
+
+    How many would you like to order?<br>
+
+        <input type="radio" name="option price" id="$10" value="$10">
+        <label for="$10">1 - $10</label>
+        <br>
+
+        <input type="radio" name="option price" id="$20" value="$20">
+        <label for="$20">2 - $20</label>
+        <br>
+
+        <input type="radio" name="option price" id="$25" value="@25">
+        <label for="$25">3 - $25</label>
+        <br><br>
+
+
+    Name  <span style="color:red">*</span> <br>
+    <input name="FirstName" value="FirstName" type="text" class="FirstName">
+    <input name="Lastname" type="text" value="Lastname" class="LastName">
+    <br><br>
+
+    Email <br>
+    <input type="text" name="email" size="35">
+    <br><br>
+
+    Phone Number<br>
+    <input name="phone" type="number1" size="3">-
+    <input name="phone" type="number2" size="3">-
+    <input name="phone" type="number3" size="4"><br><br>
+
+    <input type="submit" value="Submit">
+
+</form>
 
 </body>
 </html>
