hoan thanh bai tao bang nang cao 1

--- a/taoBangDonGian.html
+++ b/taoBangDonGian.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Tạo bảng đơn giản</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="taoBangDonGian.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <table>
